--- a/Main.html
+++ b/Main.html
@@ -23,7 +23,7 @@
         <section class="home">
             <div class="home-content">
                 <h3>Hello, It's Me</h3>
-                <h1>Vamika Sharma</h1>
+                <h1>Vanshika</h1>
                 <h3>And I'm a <span class="text"></span></h3>
                 <p>whose goal is not just to excel academically 
                     but to apply her skills to real-world situations and contribute meaningfully. <br> Beyond my academic pursuits, I am a firm believer in the power of holistic growth.</p>
@@ -44,7 +44,7 @@
             <div class="about-text">
                 <h2>About <span>Me</span></h2>
                 <h4>Aspiring Computer Science Engineer</h4>
-                <p>I am a passionate and driven first-year student pursuing a degree in Computer Science Engineering. With a keen interest in technology and a thirst for knowledge, I am dedicated to honing my skills in programming, software development, and cutting-edge technologies. Eager to explore the realms of artificial intelligence, cybersecurity, and data science, I am committed to pushing boundaries and innovating in the ever-evolving field of computer science. Through hands-on projects, academic excellence, and a proactive approach to learning, I aim to make a meaningful impact in the world of technology and contribute to shaping the future of computing.</p>
+                <p>I am a passionate first-year student pursuing a degree in Computer Science Engineering. With a keen interest in technology and a thirst for knowledge, I am dedicated to honing my skills in programming, software development, and cutting-edge technologies. Eager to explore the realms of artificial intelligence, cybersecurity, and data science, I am committed to pushing boundaries and innovating in the ever-evolving field of computer science. Through hands-on projects, academic excellence, and a proactive approach to learning, I aim to make a meaningful impact in the world of technology and contribute to shaping the future of computing.</p>
 
                 <a href="#" class="btn-box">More About Me</a>
             </div>
@@ -84,7 +84,7 @@
         <h1 class="sub-title">My <span>Skills</span></h1>
         <section>
             <div class="container1" id="skills">
-                <h1 class="heading1">Technical Skills</h1>
+                <h1 class="heading1">Technical  Skills</h1>
                 <div class="Technical-bars">
                     <div class="bar"><i class='bx bxl-html5' style="color: #c95d2e;"></i>
                         <ul class ="list">
